ingress-rules/chirpstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://us-iotreporting-dev.vault.azure.net/certificates/chirpstack/70490482f8eb4458ad9aeb6215409471
  name: chirpstack-ingress
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: cpmfgopschirpstack.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: chirpstack
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cpmfgopschirpstack.eastus.cloudapp.azure.com
    secretName: chirpstack
